--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "eslint-plugin-html": "^8.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react": "^7.37.1",
     "lint-staged": "^15.5.1",
     "lodash": "^4.17.21",
@@ -34,9 +33,12 @@
     "vitest": "^3.1.2"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.27.1",
+    "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.22.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
