--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-    "**/*.{js,jsx,ts,tsx}": ["eslint --fix", "prettier --write"],
+    "**/*.{js,jsx}": ["eslint --fix", "prettier --write"],
     "**/*.{json,css,md}": ["prettier --write"]
 }
