--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "pre-commit": "npx lint-staged"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.7.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "antd": "^5.24.9",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^10.1.2",
@@ -32,7 +34,10 @@
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
+    "uuid": "^11.1.0",
     "vitest": "^3.1.2"
   },
   "devDependencies": {
@@ -45,6 +50,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "sass": "^1.87.0",
     "simple-git-hooks": "^2.13.0",
     "vite": "^6.3.4"
   }
